--- a/code/index.html
+++ b/code/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h2>Uber:</h2>
+    <button class="uber">Request now</button>
+    <h2>Amazon:</h2>
+    <button class="amazon">Add to Cart</button>
+    <h2>Github:</h2>
+    <button class="github">Sign up</button>
+    <h2>Bootstrap:</h2>
+    <button class="bootstrap-get_started">Get started</button>
+    <button class="bootstrap-download">Download</button>
+    <h2>LinkedIn:</h2>
+    <button class="linkedin-apply_on_company_website">
+      Apply on company website
+    </button>
+    <button class="linkedin-save">Save</button>
+  </body>
 </html>
